MakeProfile's individual outputs have suffix
The individual outputs of MakeProfiles were simply named as, for
example, 0.fits, 1.fits and so on. But this would not work when
MakeProfiles is to be run in parallel and is also ambiguous. So now
the row numbers are suffixed by the output file name and put into the
output directory.

The output directory and file name fixing in MakeProfiles was also
bugy with problems I hadn't noticed before, so I fixed it.

In order to do this job, two functions were added in checkset.c:
`dirpart' and `notdirpart'.

A new subsection was also added to the manual explaining the two basic
methods to run processes simultaneously.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,18 @@
+2015-09-17  Mohammad Akhlaghi  <akhlaghi@gnu.org>
+
+	* src/mkprof/main.h (mkprofparams): Removed the p->dir0file1
+	parameter from the main structure.
+
+	* tests/mkprof/mosaic1.sh: Corrected the name of the first output
+	for the new individual name configuration (where the output file
+	name is suffixed to the row number).
+
+	* src/mkprof/ui.c (sanitycheck): Now everything based on the
+	situation the basic information for the next steps is set here.
+
+	* src/mkprof/mkprof.c (saveindividual): Removed the name checking
+	here. All the necessary information is now set in ui.c.
+
 2015-09-13  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
 	* src/imgwarp/imgwarp.c (imgwarponthread): Now calculates the
