Added --nolog option to the common options
When the scripts are run in parallel (for example within a Makefile
called with the -j option) then the log files can cause problems when
you want to clean them up in the end. One option was to set the log
file name to be based on the output file name, but I have not seen
that commonly and it would require a lot of extra code. But now, when
the log file doesn't matter, the user can simply igore it being made.

Convolve was not reading the WCS information of the input. A line is
now added in the ui.c to do the job.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2015-09-17  Mohammad Akhlaghi  <akhlaghi@gnu.org>
 
+	* src/mkprof/mkprof.c (mkprof): Only print a log file if the
+	`--nolog' option is not called.
+
+	* src/imgcrop/imgcrop.c (imgcrop): Only print a log file if the
+	`--nolog' option is not called.
+
 	* src/mkprof/main.h (mkprofparams): Removed the p->dir0file1
 	parameter from the main structure.
 
